--- a/WebApiDemo/Properties/launchSettings.json
+++ b/WebApiDemo/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "shirts",
+      "launchUrl": "api/shirts",
       "applicationUrl": "http://localhost:5107",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "shirts",
+      "launchUrl": "api/shirts",
       "applicationUrl": "https://localhost:7095;http://localhost:5107",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "shirts",
+      "launchUrl": "api/shirts",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
